--- a/oerr/index.html
+++ b/oerr/index.html
@@ -276,17 +276,15 @@
       <!-- Highlight: Pflanzen-Sprengstoff -->
       <div class="party-highlight">
         <h3 class="party-highlight-title">
-          Der "Pflanzen-Sprengstoff": Wenn Faktenfinder Experten zu eigenen
-          Übersetzungsfehlern befragen
+          Der "Pflanzen-Sprengstoff": Experten analysieren das Wachstum von
+          C4-Baumwurzeln in 80m Tiefe
         </h3>
 
         <!-- Skandal-Skala -->
         <div class="highlight-skandal-scale">
-          <h4>Seriosität von ARD-Fakten: 1/10</h4>
+          <h4>Seriosität von ARD-Fakten: 12/10 (Skala gesprengt)</h4>
           <div class="gradient-bar-container">
-            <!-- ÖRR nutzt kritisches Rot für den Füllstand via CSS Variablen -->
-            <div class="gradient-bar-filled" style="width: 10%"></div>
-            <div class="gradient-bar-unfilled" style="width: 90%"></div>
+            <div class="gradient-bar-filled" style="width: 100%"></div>
           </div>
         </div>
 
@@ -301,9 +299,11 @@
             Was tun, wenn man für
             <mark class="oerr">8,5 Milliarden Euro</mark> im Jahr
             Qualitätsjournalismus simulieren möchte? Richtig: Man nimmt einen
-            englischen Fachbegriff, übersetzt ihn falsch und befragt dann
-            ernsthaft einen Experten, warum der Autor (den man diskreditieren
-            will) so einen Unsinn schreibt.
+            englischen Satz (<i>"to plant shaped C4 charges"</i> = platzierte
+            Hohlladungen), übersetzt ihn falsch (<mark class="oerr"
+              >"Sprengstoff in Pflanzenform"</mark
+            >) und befragt dann Experten, warum der Autor (den man
+            diskreditieren will) so einen Unsinn schreibt.
           </p>
           <p class="party-highlight-description">
             Am 23. Februar 2023 leistete sich der <b>ARD-Faktenfinder</b> unter
@@ -400,6 +400,16 @@
           </p>
           <p class="party-highlight-source">
             <strong>Quelle:</strong>
+            <a
+              href="https://web.archive.org/web/20230223125045/https://www.tagesschau.de/faktenfinder/nord-stream-explosionen-hersh-101.html"
+              target="_blank"
+              rel="noopener noreferrer"
+              style="color: var(--oerr-mark-color); font-weight: bold"
+            >
+              ⚠️ DAS ORIGINAL IM ARCHIV: "Sprengstoff in Pflanzenform" (Wayback
+              Machine)
+            </a>
+            <br />
             <a
               href="https://www.freilich-magazin.com/gesellschaft/ard-faktenfinder-blamiert-sich-mit-uebersetzungsfehler"
               target="_blank"
