--- a/oerr/index.html
+++ b/oerr/index.html
@@ -65,6 +65,13 @@
         systematisch unterrepräsentiert oder diffamiert. Der ÖRR agiert faktisch
         als Regierungssender.
       </p>
+      <p>
+        <strong>Journalistische Inkompetenz & fehlende Kontrolle:</strong>
+        Qualitätsmanagement findet faktisch nicht statt. Wie der Fall des
+        "Pflanzen-Sprengstoffs" (siehe Highlights unten) zeigt, dürfen einzelne
+        Redakteure ohne Vier-Augen-Prinzip haarsträubende Übersetzungsfehler
+        publizieren und Experten zu selbst erfundenen Thesen befragen.
+      </p>
 
       <p>
         <strong>Selbstbedienung und Intendanten-Privilegien:</strong> Während
