--- a/feedback/index.html
+++ b/feedback/index.html
@@ -61,7 +61,7 @@
           <h4>Kontakt</h4>
           <ul>
             <li><a href="mailto:contact@factico.eu">Presse</a></li>
-            <li><a href="feedback.html">Feedback</a></li>
+            <li>  <a href="./">>Feedback</a></li>
           </ul>
         </div>
       </div>
