--- a/feedback/index.html
+++ b/feedback/index.html
@@ -36,8 +36,7 @@
             </div>
             <div class="feedback-message">
               <p>
-                Wir schätzen jedes Feedback! Zögern Sie nicht, uns jederzeit
-                unter
+                Zögern Sie nicht, uns jederzeit unter
                 <a href="mailto:contact@factico.eu">contact@factico.eu</a> zu
                 kontaktieren.
               </p>
@@ -61,7 +60,7 @@
           <h4>Kontakt</h4>
           <ul>
             <li><a href="mailto:contact@factico.eu">Presse</a></li>
-            <li>  <a href="./">>Feedback</a></li>
+            <li><a href="./">Feedback</a></li>
           </ul>
         </div>
       </div>
