--- a/gruene/lang/index.html
+++ b/gruene/lang/index.html
@@ -187,34 +187,53 @@
           </a>
         </div>
 
-        <!-- 3. Social Media Icons -->
-        <div class="footer-icons party-icons">
-          <a
-            href="https://www.tiktok.com/@factico.eu"
-            target="_blank"
-            class="footer-icon-link tiktok"
-            aria-label="TikTok"
-          >
-            <svg viewBox="0 0 24 24" fill="currentColor">
-              <path
-                d="M19.59 6.69a4.83 4.83 0 0 1-3.77-4.25V2h-3.45v13.67a2.89 2.89 0 0 1-5.2 1.74 2.89 2.89 0 0 1 2.31-4.64 2.93 2.93 0 0 1 .88.13V9.4a6.84 6.84 0 0 0-1-.05A6.33 6.33 0 0 0 5 20.1a6.34 6.34 0 0 0 10.86-4.43v-7a8.16 8.16 0 0 0 4.77 1.52v-3.4a4.85 4.85 0 0 1-1-.1z"
-              />
-            </svg>
-          </a>
-          <a
-            href="https://www.instagram.com/factico.eu"
-            target="_blank"
-            class="footer-icon-link insta"
-            aria-label="Instagram"
-          >
-            <svg viewBox="0 0 24 24" fill="currentColor">
-              <path
-                d="M7.8,2H16.2C19.4,2 22,4.6 22,7.8V16.2A5.8,5.8 0 0,1 16.2,22H7.8C4.6,22 2,19.4 2,16.2V7.8A5.8,5.8 0 0,1 7.8,2M7.6,4A3.6,3.6 0 0,0 4,7.6V16.4C4,18.39 5.61,20 7.6,20H16.4A3.6,3.6 0 0,0 20,16.4V7.6C20,5.61 18.39,4 16.4,4H7.6M17.25,5.5A1.25,1.25 0 0,1 18.5,6.75A1.25,1.25 0 0,1 17.25,8A1.25,1.25 0 0,1 16,6.75A1.25,1.25 0 0,1 17.25,5.5M12,7A5,5 0 0,1 17,12A5,5 0 0,1 12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9Z"
-              />
-            </svg>
-          </a>
-        </div>
-      </div>
+<!-- 3. Spalte: Social Media -->
+<div class="footer-section">
+  <h4>Folge uns</h4>
+  <div class="footer-icons">
+    <!-- TikTok -->
+    <a
+      href="https://www.tiktok.com/@factico.eu"
+      target="_blank"
+      aria-label="TikTok"
+      class="footer-icon-link tiktok"
+    >
+      <svg viewBox="0 0 24 24" fill="currentColor">
+        <path
+          d="M19.59 6.69a4.83 4.83 0 0 1-3.77-4.25V2h-3.45v13.67a2.89 2.89 0 0 1-5.2 1.74 2.89 2.89 0 0 1 2.31-4.64 2.93 2.93 0 0 1 .88.13V9.4a6.84 6.84 0 0 0-1-.05A6.33 6.33 0 0 0 5 20.1a6.34 6.34 0 0 0 10.86-4.43v-7a8.16 8.16 0 0 0 4.77 1.52v-3.4a4.85 4.85 0 0 1-1-.1z"
+        />
+      </svg>
+    </a>
+
+    <!-- Instagram -->
+    <a
+      href="https://www.instagram.com/factico.eu"
+      target="_blank"
+      aria-label="Instagram"
+      class="footer-icon-link insta"
+    >
+      <svg viewBox="0 0 24 24" fill="currentColor">
+        <path
+          d="M7.8,2H16.2C19.4,2 22,4.6 22,7.8V16.2A5.8,5.8 0 0,1 16.2,22H7.8C4.6,22 2,19.4 2,16.2V7.8A5.8,5.8 0 0,1 7.8,2M7.6,4A3.6,3.6 0 0,0 4,7.6V16.4C4,18.39 5.61,20 7.6,20H16.4A3.6,3.6 0 0,0 20,16.4V7.6C20,5.61 18.39,4 16.4,4H7.6M17.25,5.5A1.25,1.25 0 0,1 18.5,6.75A1.25,1.25 0 0,1 17.25,8A1.25,1.25 0 0,1 16,6.75A1.25,1.25 0 0,1 17.25,5.5M12,7A5,5 0 0,1 17,12A5,5 0 0,1 12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9Z"
+        />
+      </svg>
+    </a>
+
+    <!-- YouTube (NEU) -->
+    <a
+      href="https://www.youtube.com/@therealfactico"
+      target="_blank"
+      aria-label="YouTube"
+      class="footer-icon-link youtube"
+    >
+      <svg viewBox="0 0 24 24" fill="currentColor">
+        <path
+          d="M10,15L15.19,12L10,9V15M21.56,7.17C21.69,7.64 21.78,8.27 21.84,9.07C21.91,9.87 21.94,10.56 21.94,11.16L22,12C22,14.19 21.84,15.8 21.56,16.83C21.31,17.73 20.73,18.31 19.83,18.56C19.36,18.69 18.5,18.78 17.18,18.84C15.88,18.91 14.69,18.94 13.59,18.94L12,19C7.81,19 5.2,18.84 4.17,18.56C3.27,18.31 2.69,17.73 2.44,16.83C2.31,16.36 2.22,15.73 2.16,14.93C2.09,14.13 2.06,13.44 2.06,12.84L2,12C2,9.81 2.16,8.2 2.44,7.17C2.69,6.27 3.27,5.69 4.17,5.44C4.64,5.31 5.5,5.22 6.82,5.16C8.12,5.09 9.31,5.06 10.41,5.06L12,5C16.19,5 18.8,5.16 19.83,5.44C20.73,5.69 21.31,6.27 21.56,7.17Z"
+        />
+      </svg>
+    </a>
+  </div>
+</div>
 
       <!-- Rechtliches -->
       <div class="party-footer-bottom">
