--- a/oerr/index.html
+++ b/oerr/index.html
@@ -281,7 +281,7 @@
       </div>
 
       <!-- Highlight: Pflanzen-Sprengstoff -->
-      <div class="party-highlight">
+      <div class="party-highlight" id="pflanzensprengstoff">
         <h3 class="party-highlight-title">
           Der "Pflanzen-Sprengstoff": Experten analysieren das Wachstum von
           C4-Baumwurzeln in 80m Tiefe
