--- a/spd/scholz/index.html
+++ b/spd/scholz/index.html
@@ -101,7 +101,7 @@
     </section>
 
     <!-- Highlights Section -->
-    <section class="party-highlights">
+    <section class="party-highlights" id="cumex">
       <h2 class="party-section-title">Skandale und Kontroversen</h2>
 
       <!-- Highlight 1: Cum-Ex Skandal -->
@@ -203,7 +203,7 @@
       <!-- Ende CumEx -->
 
       <!-- Highlight 2: Wirecard-Skandal -->
-      <div class="party-highlight">
+      <div class="party-highlight" id="wirecard">
         <h3 class="party-highlight-title">
           Wirecard: Der größte Finanzskandal Deutschlands
         </h3>
@@ -312,7 +312,7 @@
       <!-- Ende Wirecard -->
 
       <!-- Highlight 3: G20-Gipfel Hamburg -->
-      <div class="party-highlight">
+      <div class="party-highlight" id="hafenfest">
         <h3 class="party-highlight-title">
           G20 in Hamburg: Scholz‘ Sicherheits-Fiasko
         </h3>
