--- a/index.html
+++ b/index.html
@@ -95,11 +95,13 @@
             Wissenswerte Informationen über deutsche Politiker und Parteien –
             faktenbasiert und verständlich aufbereitet.
           </p>
-          <!-- Neue Beschreibung von factico -->
+          <!-- Beschreibung von factico -->
           <p class="factico-description">
             <strong>factico.</strong> Für klare Einordnung, transparente Analyse
             und unabhängige Bewertungen politischer Akteure.
           </p>
+
+          <!-- SUCHE -->
           <div class="search-container">
             <label for="searchInput" class="visually-hidden">
               Politikersuche
@@ -117,6 +119,27 @@
               aria-live="polite"
             ></div>
           </div>
+
+          <!-- +++++ VIDEO-INTEGRATION +++++ -->
+          <div class="hero-video-container">
+            <iframe
+              src="https://www.youtube-nocookie.com/embed/xYeBQ82k3xw?rel=0&modestbranding=1"
+              title="Factico Deep Dive"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            >
+            </iframe>
+          </div>
+
+          <!-- Kleiner Text unter dem Video als Teaser -->
+          <p
+            class="factico-description"
+            style="margin-top: 1rem; font-size: 1rem; opacity: 0.9"
+          >
+            📺 <strong>Aktuelle Recherche:</strong> Warum der
+            ARD-Pflanzensprengstoff kein Fehler war.
+          </p>
+          <!-- +++++ ENDE VIDEO +++++ -->
         </div>
       </section>
 
