--- a/cducsu/guenther/index.html
+++ b/cducsu/guenther/index.html
@@ -211,6 +211,9 @@ Günther fordert das Verbot kritischer Medien
     <section class="party-members">
       <h2 class="party-section-title">Weitere Mitglieder</h2>
       <ul class="party-members-list">
+        <li class="party-member-item">
+            <a href="../merz/">Firedrich Merz</a>
+          </li>
         <li class="party-member-item">Angela Merkel</li>
         <li class="party-member-item">Markus Söder</li>
         <li class="party-member-item">Armin Laschet</li>
