--- a/cducsu/index.html
+++ b/cducsu/index.html
@@ -494,6 +494,9 @@
           <a href="../cducsu/merz/">Friedrich Merz</a>
         </li>
         <li class="party-member-item">Markus Söder</li>
+        <li class="party-member-item">
+          <a href="../cducsu/">Daniel Günther</a>
+        </li>
         <li class="party-member-item">Armin Laschet</li>
       </ul>
     </section>    
