--- a/cducsu/merz/index.html
+++ b/cducsu/merz/index.html
@@ -342,6 +342,9 @@
     <section class="party-members">
       <h2 class="party-section-title">Weitere Mitglieder</h2>
       <ul class="party-members-list">
+        <li class="party-member-item">
+          <a href="../guenther/">Daniel Günther</a>
+        </li>
         <li class="party-member-item">Angela Merkel</li>
         <li class="party-member-item">Markus Söder</li>
         <li class="party-member-item">Armin Laschet</li>
