--- a/index.html
+++ b/index.html
@@ -147,6 +147,21 @@
       <section id="news-feed" class="news-feed">
         <h2>NEWS</h2>
         <ul class="news-list">
+          <!-- NEU: GÜNTHER -->
+          <li>
+            <strong>Januar 2026:</strong>
+            Daniel Günther (CDU) fordert Medienverbote – DJV und
+            Verfassungsrechtler alarmiert.
+            <a href="/cducsu/guenther/#nius_lanz">Zum Eklat »</a>
+          </li>
+
+          <!-- Deine alten News rutschen nach unten... -->
+          <li>
+            <strong>Januar 2026:</strong>
+            Deep Dive: Warum der "PflanzenSprengstoff" der ARD kein Fehler war.
+            <a href="/oerr/#pflanzensprengstoff">Zur Analyse »</a>
+          </li>
+
           <!-- Merz Eurobonds -->
           <li>
             <strong>Dezember 2025:</strong> Merz (CDU) stimmt Eurobonds zu – Der
@@ -159,13 +174,6 @@
             <strong>Dezember 2025:</strong> Arbeitsministerin Bas (SPD) erklärt
             Arbeitgeber zum Feind
             <a href="/spd/bas/#klassenkampf">Mehr lesen</a>
-          </li>
-
-          <!-- Reichinnek Eintrag -->
-          <li>
-            <strong>September 2025:</strong> So denkt Reichinnek (Linke) über
-            die Ermordung von Charlie Kirk
-            <a href="/linke/reichinnek/#empathie">Mehr lesen</a>
           </li>
         </ul>
       </section>
