nius update lanz

--- a/cducsu/guenther/index.html
+++ b/cducsu/guenther/index.html
@@ -184,6 +184,43 @@ Günther fordert das Verbot kritischer Medien
             </div>
           </div>
 
+          <!-- TRENNLINIE -->
+          <hr style="border: 0; border-top: 1px solid #ddd; margin: 20px 0;">
+
+          <!-- UPDATE BLOCK -->
+          <div class="status-indicator status-indicator--critical" style="margin-bottom: 1rem; background: #ffebee; color: #c62828;">
+            <strong>🚨 UPDATE 15.01.2026: "Lanz-Gate" – Das ZDF schneidet sich die Wahrheit zurecht</strong>
+          </div>
+
+          <p class="party-highlight-description">
+            Am 14.01. versuchte Markus Lanz, die Zensur-Aussagen zu retten. Er behauptete, Kritiker (wie Beatrix von Storch) würden "Fake News" verbreiten; es sei nie um NIUS gegangen, sondern um "soziale Medien" allgemein.
+          </p>
+
+          <p class="party-highlight-description">
+            <strong>Der Manipulations-Vorwurf:</strong><br>
+            Um diese These zu stützen, zeigte Lanz einen kurzen Ausschnitt der Sendung. Das Problem: <strong>Er ließ den Kontext davor weg.</strong>
+            Im Original sagte Günther explizit: <i>"Wer hat denn dagegen geschossen? NIUS und solche Portale..."</i>. Daraufhin folgte Lanz Frage nach Verboten und Günthers "Ja".
+          </p>
+
+          <p class="party-highlight-description">
+            <strong>Das Urteil der Zuschauer:</strong><br>
+            Die Kommentare unter dem ZDF-Video explodieren. Zuschauer werfen Lanz <strong>"Unredlichkeit"</strong> und <strong>"Gaslighting"</strong> vor.
+            <i>"Herr Lanz, sie haben den Teil vorher, in dem Herr Günther explizit NIUS erwähnt, wohlwissend nicht gezeigt"</i>, so der Tenor.
+            Statt Aufklärung betreibt der ÖRR hier aktive Geschichtsklitterung, um einen Ministerpräsidenten reinzuwaschen.
+          </p>
+
+          <div class="smallvideo-container">
+            <div class="video-wrapper">
+              <iframe
+                src="https://www.youtube.com/embed/MBG_nQ6cpqM?si=SQK0zWjQkG2SfoO4"
+                title="ZDFheute Nachrichten: Zensurvorwürfe: Falsche Berichterstattung von Nius über Daniel Günther | Markus Lanz vom 14.01.2026
+                "
+                frameborder="0"
+                allowfullscreen
+              ></iframe>
+            </div>
+          </div>
+
           <p class="party-highlight-date">
             <strong>Zeitraum:</strong> Januar 2026
           </p>
