--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               </svg>
             </a>
 
-            <!-- INSTAGRAM -->
+           <!-- INSTAGRAM -->
             <a
               href="https://www.instagram.com/factico.eu"
               target="_blank"
@@ -67,43 +67,21 @@
               </svg>
             </a>
 
-         <!-- +++++ VIDEO-GRID (2 VIDEOS) +++++ -->
-          <div class="video-grid">
-            
-            <!-- VIDEO 1: LANZ (Links = Neu) -->
-            <div class="video-item">
-              <div class="hero-video-container">
-                <iframe
-                  src="https://www.youtube-nocookie.com/embed/lDDqR80b0MU?rel=0&modestbranding=1"
-                  title="Factico Lanz Gate"
-                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                  allowfullscreen
-                >
-                </iframe>
-              </div>
-              <p class="video-caption">
-                📺 <strong>Lanz-Gate:</strong> Warum das ZDF den Kontext löschen MUSSTE. <span class="status-indicator--critical" style="padding: 2px 6px; font-size: 0.7em;">NEU</span>
-              </p>
-            </div>
-
-            <!-- VIDEO 2: PFLANZEN-SPRENGSTOFF -->
-            <div class="video-item">
-              <div class="hero-video-container">
-                <iframe
-                  src="https://www.youtube-nocookie.com/embed/xYeBQ82k3xw?rel=0&modestbranding=1"
-                  title="FACTICO-Analyse: Pflanzensprengstoff"
-                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                  allowfullscreen
-                >
-                </iframe>
-              </div>
-              <p class="video-caption">
-                🧪 <strong>Wissenschaftlich geprüft:</strong> Warum der ARD-Pflanzensprengstoff kein Fehler war.
-              </p>
-            </div>
-
+            <!-- YOUTUBE (NEU) -->
+            <a
+              href="https://www.youtube.com/@therealfactico"
+              target="_blank"
+              class="nav-icon-link youtube"
+              aria-label="YouTube"
+            >
+              <svg viewBox="0 0 24 24" fill="currentColor">
+                <path
+                  d="M10,15L15.19,12L10,9V15M21.56,7.17C21.69,7.64 21.78,8.27 21.84,9.07C21.91,9.87 21.94,10.56 21.94,11.16L22,12C22,14.19 21.84,15.8 21.56,16.83C21.31,17.73 20.73,18.31 19.83,18.56C19.36,18.69 18.5,18.78 17.18,18.84C15.88,18.91 14.69,18.94 13.59,18.94L12,19C7.81,19 5.2,18.84 4.17,18.56C3.27,18.31 2.69,17.73 2.44,16.83C2.31,16.36 2.22,15.73 2.16,14.93C2.09,14.13 2.06,13.44 2.06,12.84L2,12C2,9.81 2.16,8.2 2.44,7.17C2.69,6.27 3.27,5.69 4.17,5.44C4.64,5.31 5.5,5.22 6.82,5.16C8.12,5.09 9.31,5.06 10.41,5.06L12,5C16.19,5 18.8,5.16 19.83,5.44C20.73,5.69 21.31,6.27 21.56,7.17Z"
+                />
+              </svg>
+            </a>
           </div>
-          <!-- +++++ ENDE VIDEO-GRID +++++ -->
+          <!-- Ende nav-items -->
         </div>
       </nav>
     </header>
@@ -142,26 +120,44 @@
             ></div>
           </div>
 
-          <!-- +++++ VIDEO-INTEGRATION +++++ -->
-          <div class="hero-video-container">
-            <iframe
-              src="https://www.youtube-nocookie.com/embed/xYeBQ82k3xw?rel=0&modestbranding=1"
-              title="Factico Deep Dive"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            >
-            </iframe>
-          </div>
+          <!-- +++++ VIDEO-GRID (HIER IST ES RICHTIG) +++++ -->
+          <div class="video-grid">
+            
+            <!-- VIDEO 1: LANZ -->
+            <div class="video-item">
+              <div class="hero-video-container">
+                <iframe
+                  src="https://www.youtube-nocookie.com/embed/lDDqR80b0MU?rel=0&modestbranding=1"
+                  title="Factico Lanz Gate"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen
+                >
+                </iframe>
+              </div>
+              <p class="video-caption">
+                📺 <strong>Lanz-Gate:</strong> Warum das ZDF den Kontext löschen MUSSTE. <span class="status-indicator--critical" style="padding: 2px 6px; font-size: 0.7em;">NEU</span>
+              </p>
+            </div>
 
-          <!-- Kleiner Text unter dem Video als Teaser -->
-          <p
-            class="factico-description"
-            style="margin-top: 1rem; font-size: 1rem; opacity: 0.9"
-          >
-            📺 <strong>Aktuelle Recherche:</strong> Warum der
-            ARD-Pflanzensprengstoff kein Fehler war.
-          </p>
-          <!-- +++++ ENDE VIDEO +++++ -->
+            <!-- VIDEO 2: PFLANZEN-SPRENGSTOFF -->
+            <div class="video-item">
+              <div class="hero-video-container">
+                <iframe
+                  src="https://www.youtube-nocookie.com/embed/xYeBQ82k3xw?rel=0&modestbranding=1"
+                  title="FACTICO-Analyse: Pflanzensprengstoff"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen
+                >
+                </iframe>
+              </div>
+              <p class="video-caption">
+                🧪 <strong>Wissenschaftlich geprüft:</strong> Warum der ARD-Pflanzensprengstoff kein Fehler war.
+              </p>
+            </div>
+
+          </div>
+          <!-- +++++ ENDE VIDEO-GRID +++++ -->
+
         </div>
       </section>
 
