--- a/index.html
+++ b/index.html
@@ -134,9 +134,10 @@
                 >
                 </iframe>
               </div>
-              <p class="video-caption">
-                📺 <strong>Lanz-Gate:</strong> Warum das ZDF den Kontext löschen MUSSTE. <span class="status-indicator--critical" style="padding: 2px 6px; font-size: 0.7em;">NEU</span>
-              </p>
+         <p class="video-caption">
+ <strong>Lanz-Gate:</strong> Warum das ZDF den Kontext löschen MUSSTE. 
+  <span class="badge-new">NEU</span>
+</p>
             </div>
 
             <!-- VIDEO 2: PFLANZEN-SPRENGSTOFF -->
@@ -151,7 +152,7 @@
                 </iframe>
               </div>
               <p class="video-caption">
-                🧪 <strong>Wissenschaftlich geprüft:</strong> Warum der ARD-Pflanzensprengstoff kein Fehler war.
+                <strong>Wissenschaftlich geprüft:</strong> Warum der ARD-Pflanzensprengstoff kein Fehler war.
               </p>
             </div>
 
