--- a/cducsu/guenther/index.html
+++ b/cducsu/guenther/index.html
@@ -134,10 +134,20 @@ Günther fordert das Verbot kritischer Medien
           </p>
         </div>
 
-        <div class="gradient-bar-container">
-          <div class="gradient-bar-filled" style="width: 20%"></div>
-          <div class="gradient-bar-unfilled" style="width: 80%"></div>
-        </div>
+ <!-- VIDEO EINFÜGEN -->
+          <div class="hero-video-container" style="margin: 2rem auto; box-shadow: 0 5px 15px rgba(0,0,0,0.1);">
+            <iframe 
+              src="https://www.youtube-nocookie.com/embed/DEINE_LANZ_VIDEO_ID?rel=0&modestbranding=1" 
+              title="Factico Lanz Gate Analyse" 
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+              allowfullscreen>
+            </iframe>
+          </div>
+          
+          <p class="factico-description" style="text-align: center; margin-top: 0.5rem; font-size: 0.9rem;">
+            📺 <strong>Die Video-Analyse:</strong> Warum Lanz schneiden musste.
+          </p>
+          <!-- VIDEO ENDE -->
 
         <button class="toggle-button" onclick="toggleHighlight(this)">
           Details anzeigen <span class="arrow">▼</span>
