--- a/cducsu/guenther/index.html
+++ b/cducsu/guenther/index.html
@@ -134,14 +134,16 @@ Günther fordert das Verbot kritischer Medien
           </p>
         </div>
 
- <!-- VIDEO EINFÜGEN -->
-          <div class="hero-video-container" style="margin: 2rem auto; box-shadow: 0 5px 15px rgba(0,0,0,0.1);">
-            <iframe 
-              src="https://www.youtube-nocookie.com/embed/DEINE_LANZ_VIDEO_ID?rel=0&modestbranding=1" 
-              title="Factico Lanz Gate Analyse" 
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-              allowfullscreen>
-            </iframe>
+ <!-- VIDEO  -->
+         <div class="smallvideo-container">
+            <div class="video-wrapper">
+              <iframe
+                src="https://www.youtube.com/embed/lDDqR80b0MU?si=3DOjVoYwru97jQ1l"
+                title="Lanz vs. Nius | Unsere wissenschaftliche Analyse"
+                frameborder="0"
+                allowfullscreen
+              ></iframe>
+            </div>
           </div>
           
           <p class="factico-description" style="text-align: center; margin-top: 0.5rem; font-size: 0.9rem;">
