--- a/cducsu/guenther/index.html
+++ b/cducsu/guenther/index.html
@@ -146,8 +146,8 @@ Günther fordert das Verbot kritischer Medien
             </div>
           </div>
           
-          <p class="factico-description" style="text-align: center; margin-top: 0.5rem; font-size: 0.9rem;">
-            📺 <strong>Die Video-Analyse:</strong> Warum Lanz schneiden musste.
+          <p class="factico-description" style="text-align: left; margin-top: 0.5rem; font-size: 0.9rem;">
+            📺 <strong>Die Video-Analyse:</strong> Warum das ZDF den Kontext entfernen musste.
           </p>
           <!-- VIDEO ENDE -->
 
