--- a/oerr/index.html
+++ b/oerr/index.html
@@ -65,6 +65,12 @@
         systematisch unterrepräsentiert oder diffamiert. Der ÖRR agiert faktisch
         als Regierungssender.
       </p>
+
+       <p>
+        <strong>Aktive Manipulation & Framing:</strong>
+        Wenn die Realität nicht zum Narrativ passt, wird nachgeholfen. Das "Lanz-Gate" (siehe <a href="#lanz_gate">Skandale & MIssstände</a>) beweist, dass Redaktionen Videomaterial gezielt sinnentstellend kürzen, um Politiker reinzuwaschen. Statt neutraler Berichterstattung findet "Betreutes Denken" statt: Der Zuschauer soll nur sehen, was ins Weltbild der Redaktion passt.
+      </p>
+      
       <p>
         <strong>Journalistische Inkompetenz & fehlende Kontrolle:</strong>
         Qualitätsmanagement findet faktisch nicht statt. Wie der Fall des
