--- a/oerr/index.html
+++ b/oerr/index.html
@@ -71,10 +71,10 @@
         Wenn die Realität nicht zum Narrativ passt, wird nachgeholfen. Das "Lanz-Gate" (siehe <a href="#lanz_gate">Skandale & MIssstände</a>) beweist, dass Redaktionen Videomaterial gezielt sinnentstellend kürzen, um Politiker reinzuwaschen. Statt neutraler Berichterstattung findet "Betreutes Denken" statt: Der Zuschauer soll nur sehen, was ins Weltbild der Redaktion passt.
       </p>
       
-      <p>
+ <p>
         <strong>Journalistische Inkompetenz & fehlende Kontrolle:</strong>
         Qualitätsmanagement findet faktisch nicht statt. Wie der Fall des
-        "Pflanzen-Sprengstoffs" (siehe Highlights unten) zeigt, dürfen einzelne
+        "Pflanzen-Sprengstoffs" (siehe <a href="#pflanzensprengstoff">Skandale & Missstände</a>) zeigt, dürfen einzelne
         Redakteure ohne Vier-Augen-Prinzip haarsträubende Übersetzungsfehler
         publizieren und Experten zu selbst erfundenen Thesen befragen.
       </p>
