--- a/oerr/hayali/index.html
+++ b/oerr/hayali/index.html
@@ -69,7 +69,7 @@
           <p>
             <strong>Haltungsjournalistin:</strong> Bezeichnet sich selbst als
             "Haltungsjournalistin" und mischt politische Meinungsäußerung
-            bewusst in ihre journalistische Arbeit ein
+            bewusst in ihre journalistische Arbeit ein.
           </p>
 
           <h3>FACTS</h3>
