--- a/oerr/hayali/index.html
+++ b/oerr/hayali/index.html
@@ -119,6 +119,10 @@
           <p class="highlight-description">
             Wenn man "Haltung" mit Doppelmoral verwechselt: Hayali belehrt über Quellenarbeit und verteidigt dabei Manipulation.
           </p>
+                    <div class="gradient-bar-container">
+            <div class="gradient-bar-filled" style="width: 05%"></div>
+            <div class="gradient-bar-unfilled" style="width: 95%"></div>
+          </div>
         </div>
 
         <button class="toggle-button" onclick="toggleHighlight(this)">
