--- a/oerr/index.html
+++ b/oerr/index.html
@@ -109,7 +109,10 @@
             <!-- Skandal-Skala -->
         <div class="highlight-skandal-scale">
           <h4>Manipulation & Fake News: 8/10 </h4>
-          
+                    <div class="gradient-bar-container">
+            <div class="gradient-bar-filled" style="width: 80%"></div>
+            <div class="gradient-bar-unfilled" style="width: 20%"></div>
+          </div>          
         </div>
 
    <!-- VIDEO  -->
