--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="hero-content">
           <h1>Demokratie verstehen. Verantwortung einfordern.</h1>
           <p class="mission-statement">
-            Wissenswerte Informationen über deutsche Politiker und Parteien –
+            Wissenswerte Informationen über Politik & Medien –
             faktenbasiert und verständlich aufbereitet.
           </p>
           <!-- Beschreibung von factico -->
