--- a/cducsu/merz/index.html
+++ b/cducsu/merz/index.html
@@ -211,7 +211,7 @@
             <strong>Die Rechnung zahlt der Michel:</strong>
             Während Länder wie Ungarn, die Slowakei und Tschechien sich fein
             rausgehalten haben, trägt Deutschland als größter Nettozahler das
-            Hauptriesiko. Experten schätzen die zusätzliche Zinsbelastung für
+            Hauptrisiko. Experten schätzen die zusätzliche Zinsbelastung für
             den EU-Haushalt auf rund
             <strong>3 Milliarden Euro jährlich</strong> – mit Deutschland als
             größtem Nettozahler im Hauptfokus. Da renommierte Ökonomen (u. a.
